k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudops-frontend
  namespace: cloudops
spec:
  type: ClusterIP
  selector:
    app: cloudops-frontend
  ports:
    - name: http
      port: 80
      targetPort: http
